Changes to Responsiveness and Overflow Fixed

--- a/CSS/index.scss
+++ b/CSS/index.scss
@@ -15,7 +15,7 @@ html {
   font-size: 62.5%;
 scroll-behavior: smooth;
 width: 100%;
-overflow: visible;
+overflow-x: hidden;
 
   /* 1rem = 10px */
 }
@@ -36,7 +36,7 @@ body {
 }
 
 .header .logoText {
-  font-size: 22px;
+  font-size: 26px;
   text-transform: uppercase;
   font-weight: 600;
 }
@@ -118,9 +118,8 @@ transition: 0.3s;
   scale: 1.06;
 }
 .mainContent{
-  padding: 9.6rem 0;
-  height: 60vh;
-  margin-top: 50px;
+
+  margin-top: -100px;
   gap: 25rem;
   display: flex;
   justify-content: center;
@@ -213,6 +212,9 @@ transition: 0.3s;
   scale: 1.2;
   box-shadow:0 0 13px #bdbdbd;
 }
+
+
+
 /* ====================KeyFrames==================== */
 
 @keyframes popUp {
@@ -289,6 +291,7 @@ opacity: 0;
 .mainContent{
   display: grid;
   gap: 0rem;
+  margin-top: 150px;
 }
 .socials{
   font-size: 18px;
